2008-10-28  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-wifi.c
	  src/applet-dialogs.c
	  src/connection-editor/page-wireless-security.c
	  src/connection-editor/page-wireless.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
	  src/wireless-dialog.c
	  src/wireless-security/wireless-security.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wpa-psk.c
		- Use wireless setting accessors

2008-10-27  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_set_pre_keyring_callback): set a function to be called when
			doing synchronous keyring operations
		- (nm_gconf_add_keyring_item, nm_gconf_get_keyring_items): call that
			function if the keyring is locked

	* src/applet.c
		- (applet_pre_keyring_callback): close the menu before showing accessing
			the keyring (bgo #546034, rh #353451)

2008-10-27  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/connection-editor/page-ppp.c
		- Use ppp setting accessors

2008-10-27  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
	  src/applet.c
	  src/gconf-helpers/gconf-helpers.c
		- Use setting accessors

2008-10-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- Don't allow editing of read-only connections

	* src/gconf-helpers/gconf-helpers.c
		- Don't read or save the connection setting's 'read-only' value to GConf

2008-10-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- Revert unintended checkin for read-only connections that snuck into
			the previous commit

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Jaap A. Haitsma <jaap@haitsma.org>
